remove will-change to fix text blurring

--- a/src/widget/Transition.less
+++ b/src/widget/Transition.less
@@ -1,7 +1,3 @@
-.app-transition-enter, .app-transition-enter-done, .app-transition-exit {
-    will-change: transform, opacity;
-}
-
 .app-transition-enter {
     opacity: 0;
     transform: translateY(-3px);
